--- a/jetbot/jetbot_stats.service
+++ b/jetbot/jetbot_stats.service
@@ -5,7 +5,7 @@ Description=JetBot stats display service
 [Service]
 Type=simple
 User=jetbot
-ExecStart=/bin/sh -c "python3 -m jetbot.apps.stats"
+ExecStart=/bin/sh -c "python3 /home/jetbot/jetbot/jetbot/apps/stats.py"
 WorkingDirectory=/home/jetbot
 Restart=always
 
